--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -36,13 +36,19 @@ header div{
 #logo{
     float: left;
     font-size: 250%;
-    margin-left: 40px;
+    margin-left: 10px;
     padding-bottom: 10px;
     text-decoration: none;
 }
 
 #bike{
     float: right;
+    font-size: 300%;
+    margin-right: 10px;
+}
+
+#logo, #bike{
+    line-height: 75px;
 }
 
 /*Nav menu*/
