--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -120,20 +120,21 @@ header div{
 footer{
     height: 100px;
     width: 100%;
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
 }
 
 footer h3{
-    position: relative;
+    /*position: relative;*/
     float: left;
     color: #111111;
     padding-top: 45px;
     padding-bottom: 45px; 
+    padding-left: 5px;;
 }
 
 .media-links{
-    position: relative;
+    /*position: relative;*/
     float: right;
     padding-top: 45px;
     padding-bottom: 45px; 
@@ -148,4 +149,32 @@ footer h3{
     margin-right: 25px;
     padding-right: 25px;
     color: #111111
+}
+
+/* about section */
+
+#about{
+    height: 300px;
+    width: 100%;
+    text-align: center;
+}
+
+#outer-container{
+    clear: both;
+}
+
+#about-container{
+    height: 150px;
+    width: 50%;
+    padding-top: 5%;
+    text-align: center;
+    float: left;
+}
+
+#quote-container{
+    height: 150px;
+    width: 50%;
+    padding-top: 5%;
+    text-align: center;
+    float: right;
 }
