--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -70,7 +70,7 @@ header div{
 }
 
 .open{
-    background-color: #646262;
+    /*background-color: #646262;*/
     border-bottom: 1px solid #111111;
 }
 
@@ -113,11 +113,11 @@ header div{
 
 /* Equipment,Route page main info container, one thrid container*/
 .main-section{
-    height: 600px;
+    height: 700px;
     width: 100%;
     overflow: none;
     /*background-color: aqua;*/
-    /*border: 1px solid black;*/
+    border: 1px solid #111111
 }
 
 #bike-clothing-section h2{
@@ -135,8 +135,9 @@ header div{
 #bike-section-video{
     float: right;
     width: 45%;
-    padding-right: 5%;
+    padding-right: 2.5%;
     padding-top: 5%;
+    padding-left: 2.5%;
 }
 
 #bike-clothing-section  li{
@@ -149,7 +150,8 @@ header div{
 #clothing-section-image{
     float: right;
     width: 45%;
-    padding-right: 5%;
+    padding-right: 2.5%;
+    padding-left: 2.5%;
     padding-top: 5%;
 }
 
@@ -160,9 +162,10 @@ header div{
 
 .one-third-box{
     height: 500px;
-    background-color: brown;
-    border: 1px solid black;
+    /*background-color: brown;*/
+    /*border: 1px solid black;*/
     text-align: center;
+    border-bottom: 1px solid #111111;
 }
 
 #right{
@@ -173,11 +176,13 @@ header div{
 #left{
     float: left;
     width: 33%;
+    border-right: 1px solid #111111;
 }
 
 #center{
     float: left;
     width: 33%;
+    border-right: 1px solid #111111;
 }
 
 .one-third-box img{
