--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -202,41 +202,6 @@ header div{
     width: 100%;
 }
 
-/* Footer and social media links */
-footer{
-    height: 50px;
-    width: 100%;
-    /*position: absolute;*/
-    bottom: 0;
-}
-
-footer h3{
-    /*position: relative;*/
-    float: left;
-    color: #111111;
-    padding-top: 45px;
-    padding-bottom: 45px; 
-    padding-left: 5px;;
-}
-
-.media-links{
-    /*position: relative;*/
-    float: right;
-    padding-top: 45px;
-    padding-bottom: 45px; 
-}
-
-.media-links > li{
-    display: inline;
-}
-
-.media-links i{
-    font-size: 120%;
-    margin-right: 25px;
-    padding-right: 25px;
-    color: #111111
-}
-
 /* about section */
 
 #about{
@@ -272,4 +237,63 @@ footer h3{
     font-size: large;
     color: #ffffff;
     padding: 2px 6px 2px 6px;
+}
+
+/* Form Section */
+#sign-up{
+    background-image: url("../Images/group-cycle.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+    /*position: absolute;*/
+}
+
+.details-form{
+    /*position: relative;*/
+    color: #fff;
+    background-color: rgba(60, 60, 60, 0.5);
+    max-width: 450px;
+    margin: auto;
+    padding: 2.5%;
+}
+
+.details-form h2{
+    text-align: center;
+}
+
+
+
+/* Footer and social media links */
+footer{
+    height: 50px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+footer h3{
+    /*position: relative;*/
+    float: left;
+    color: #111111;
+    padding-top: 45px;
+    padding-bottom: 45px; 
+    padding-left: 5px;;
+}
+
+.media-links{
+    /*position: relative;*/
+    float: right;
+    padding-top: 45px;
+    padding-bottom: 45px; 
+}
+
+.media-links > li{
+    display: inline;
+}
+
+.media-links i{
+    font-size: 120%;
+    margin-right: 25px;
+    padding-right: 25px;
+    color: #111111
 }
