--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -244,24 +244,37 @@ header div{
     background-image: url("../Images/group-cycle.jpg");
     background-size: cover;
     background-position: center;
-    height: 600px;
-    /*position: absolute;*/
+    width: 100%;
 }
 
 .details-form{
-    /*position: relative;*/
     color: #fff;
-    background-color: rgba(60, 60, 60, 0.5);
+    /*background-color: rgba(60, 60, 60, 0.5);*/
     max-width: 450px;
-    margin: auto;
-    padding: 2.5%;
+    margin: 0 auto;
+    padding-top: 5%;
 }
 
 .details-form h2{
     text-align: center;
 }
 
+.form-input{
+    width: 80%;
+    height: 20px;
+    margin: 10px 5px 10px 30px;
+    border: 1px solid #111111;
+    border-radius: 5px;
+}
 
+label{
+    padding-left: 5px;
+}
+
+#form-button{
+    border-radius: 5px;
+    width: 100%;
+}
 
 /* Footer and social media links */
 footer{
