Add embedded maps to suggested routes section

--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -296,6 +296,11 @@ footer h3{
     width: 75%;
 }
 
+#left iframe{
+    width: 90%;
+    bottom: 5%;
+}
+
 /* Form Section */
 #sign-up{
     background-image: url("../Images/group-cycle.jpg");
