--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -323,12 +323,15 @@ footer h3{
     color: #fff;
     /*background-color: rgba(60, 60, 60, 0.5);*/
     max-width: 450px;
-    margin: 0 auto;
-    padding-top: 5%;
+    position: absolute;/* These 4 lines are to center the div, spent some time researching this and found a solution on youtube */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .details-form h2{
     text-align: center;
+    color: #fff;
 }
 
 .form-input{
