--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -111,12 +111,6 @@ header div{
     border-right: 1px solid #111111;
 }
 
-.one-third-box img{
-    height: 40%;
-    width: 90%;
-    padding-top: 5%;
-}
-
 /* Footer and social media links */
 footer{
     height: 50px;
@@ -186,39 +180,43 @@ footer h3{
 
 /* about section */
 
-#about{
-    height: 300px;
+.main-home-section{
     width: 100%;
     text-align: center;
 }
 
-#outer-container{
-    clear: both;
+.main-home-section h2{
+    padding: 4%;
 }
-
-#about-container{
-    height: 150px;
+.outer-container{
+    height: 200px;
     width: 50%;
-    padding-top: 5%;
-    text-align: center;
     float: left;
 }
 
-#quote-container{
-    height: 150px;
-    width: 50%;
-    padding-top: 5%;
+.about-quote-container{
+    height: 75px;
+    width: 40%;
+    padding: 5%;
     text-align: center;
-    float: right;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+.about-quote-color{
+    background-color: rgba(59, 57, 57, 0.3);
 }
 
 .goButton{
-    padding: 5px;
     text-decoration: none;
     background-color: #ff0000;
     font-size: large;
     color: #ffffff;
-    padding: 2px 6px 2px 6px;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+#go-button{
 }
 
 /* Equipment page*/
@@ -261,6 +259,12 @@ footer h3{
 #clothing-section-image img{
     height: 400px;
     width: 60%;
+}
+
+.one-third-box img{
+    height: 40%;
+    width: 90%;
+    padding-top: 5%;
 }
 
 /*Map section dimensions*/
