--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -188,15 +188,21 @@ footer h3{
 .main-home-section h2{
     padding: 4%;
 }
+
 .outer-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     height: 200px;
-    width: 50%;
-    float: left;
+    width: 100%;
 }
 
 .about-quote-container{
+    display: flex;
+    flex-direction: column;
     height: 75px;
-    width: 40%;
+    width: 30%;
     padding: 5%;
     text-align: center;
     margin: 0 auto;
@@ -217,6 +223,7 @@ footer h3{
 }
 
 #go-button{
+    padding: 5%;
 }
 
 /* Equipment page*/
