--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -186,27 +186,27 @@ footer h3{
 }
 
 .main-home-section h2{
-    padding: 4%;
+    padding: 2%;
 }
 
 .outer-container{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    height: 200px;
+    /* height: 200px; */
     width: 100%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .about-quote-container{
     display: flex;
     flex-direction: column;
     height: 75px;
-    width: 30%;
+    width: 20%;
     padding: 5%;
     text-align: center;
-    margin: 0 auto;
     border-radius: 10px;
+    justify-content: flex-end;
 }
 
 .about-quote-color{
