--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -82,9 +82,10 @@ header div{
 .main-section{
     height: 700px;
     width: 100%;
-    overflow: none;
-    /*background-color: aqua;*/
-    border-bottom: 1px solid #111111
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 .one-third-box{
@@ -111,6 +112,9 @@ header div{
     border-right: 1px solid #111111;
 }
 
+.main-box-color{
+    background-color: rgba(59, 57, 57, 0.3);
+}
 /* Footer and social media links */
 footer{
     height: 50px;
@@ -209,10 +213,6 @@ footer h3{
     justify-content: flex-end;
 }
 
-.about-quote-color{
-    background-color: rgba(59, 57, 57, 0.3);
-}
-
 .goButton{
     text-decoration: none;
     background-color: #ff0000;
@@ -230,22 +230,19 @@ footer h3{
 
 #bike-clothing-section h2{
     text-align: center;
-    padding-top: 2%;
+    padding: 3%;
 }
 
-#main-section-text{
-    float: left;
-    width: 45%;
-    padding-left: 5%;
-    padding-top: 5%;
+.main-section-text{
+    width: 42%;
+    margin: 0 auto;
+    padding: 2%;
+    border-radius: 5px;
 }
 
-#bike-section-video{
-    float: right;
-    width: 45%;
-    padding-right: 2.5%;
-    padding-top: 5%;
-    padding-left: 2.5%;
+.bike-section-media{
+    width: 42%;
+    margin: 0 auto;
 }
 
 #bike-clothing-section  li{
