--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -83,9 +83,10 @@ header div{
     height: 700px;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
+    align-content: flex-start;
 }
 
 .one-third-box{
@@ -98,7 +99,7 @@ header div{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: center;
+    align-content: space-around;
     justify-content: space-around;
 }
 
@@ -114,6 +115,23 @@ header div{
 
 .block-section{
     padding: 1%;
+}
+
+.goButton{
+    text-decoration: none;
+    background-color: #ff0000;
+    font-size: large;
+    color: #ffffff;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.go-button{
+    padding: 5%;
+}
+
+.button{
+    display: flex;
 }
 
 /* Footer and social media links */
@@ -214,19 +232,6 @@ footer h3{
     justify-content: flex-end;
 }
 
-.goButton{
-    text-decoration: none;
-    background-color: #ff0000;
-    font-size: large;
-    color: #ffffff;
-    border-radius: 5px;
-    padding: 5px;
-}
-
-#go-button{
-    padding: 5%;
-}
-
 /* Equipment page*/
 
 .main-section h2{
@@ -241,14 +246,18 @@ footer h3{
     border-radius: 5px;
 }
 
+.bike-button{
+    width: 5%;
+}
+
 .bike-section-media{
     width: 45%;
     margin: 0 auto;
 }
 
 .bike-section-media img{
-    height: 100%;
-    width: 100%;
+    width: 50%;
+    height: 50%;
     border-radius: 5px;
 }
 
