--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -31,7 +31,7 @@ header div{
 }
 
 .navigation{
-    height: 40px;
+    height: 35px;
 }
 
 .logo{
@@ -140,20 +140,21 @@ footer{
     height: 50px;
     width: 100%;
     bottom: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 footer h3{
-    /*position: relative;*/
-    float: left;
     color: #111111;
     padding-top: 45px;
     padding-bottom: 45px; 
-    padding-left: 5px;;
+    padding-left: 5px;
 }
 
 .media-links{
     /*position: relative;*/
-    float: right;
     padding-top: 45px;
     padding-bottom: 45px; 
 }
@@ -373,6 +374,14 @@ label{
 /*tablet*/
 
 @media screen and (max-width: 1200px){
+
+    .logo{
+        font-size: 200%;
+        margin-left: 10px;
+        padding-bottom: 10px;
+        text-decoration: none;
+    }
+
     .about-quote-container{
         display: flex;
         flex-direction: column;
@@ -387,6 +396,13 @@ label{
 
 /* mobile */
 @media screen and (max-width: 950px){
+    .logo{
+        font-size: 200%;
+        margin-left: 10px;
+        padding-bottom: 10px;
+        text-decoration: none;
+    }
+
     .outer-container{
         display: flex;
         /* height: 200px; */
@@ -402,5 +418,68 @@ label{
         text-align: center;
         border-radius: 10px;
         justify-content: center; 
+    }
+
+    footer{
+        height: 50px;
+        width: 100%;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: flex-start;
+    }
+
+    footer h3{
+        color: #111111;
+        padding-top: 45px;
+    }
+
+    .media-links{
+        padding-bottom: 45px;
+    }
+
+    .media-links i{
+        font-size: 120%;
+        padding-right: 25px;
+        color: #111111
+    }
+}
+
+@media screen and (max-width: 380px){
+
+    .links{
+        letter-spacing: 2px;
+        font-size: 100%;
+        position: relative;
+        text-align: center;
+    }
+
+    #covering-text{
+        font-size: 130%;
+        font-family: Oswald, sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        width: 300px;
+        height: 200px;
+        /* padding-top: 40px; */
+        padding-left: 10px;
+        bottom: 30px;
+        /* right: 150px; */
+        position: absolute;
+    }
+
+    .about-quote-container p{
+        font-size: 12px;
+    }
+
+
+    .goButton{
+        text-decoration: none;
+        background-color: #ff0000;
+        /* font-size: large; */
+        color: #ffffff;
+        border-radius: 5px;
+        /* padding: 5px;*/
     }
 }
