--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -386,11 +386,19 @@ label{
         display: flex;
         flex-direction: column;
         height: 75px;
-        width: 35%;
+        width: 20%;
         padding: 5%;
         text-align: center;
         border-radius: 10px;
         justify-content: center;
+    }
+
+    footer{
+        height: 50px;
+        width: 100%;
+        bottom: 0;
+        display: flex;
+        flex-direction: row;
     }
 }
 
@@ -403,6 +411,10 @@ label{
         text-decoration: none;
     }
 
+    #covering-text{
+        right: 50px;
+    }
+
     .outer-container{
         display: flex;
         /* height: 200px; */
@@ -413,7 +425,7 @@ label{
     .about-quote-container{
         display: flex;
         height: 100px;
-        width: 38%;
+        width: 40%;
         padding: 9%;
         text-align: center;
         border-radius: 10px;
@@ -436,7 +448,7 @@ label{
     }
 
     .media-links{
-        padding-bottom: 45px;
+        padding-top: 10px;
     }
 
     .media-links i{
@@ -456,17 +468,12 @@ label{
     }
 
     #covering-text{
-        font-size: 130%;
-        font-family: Oswald, sans-serif;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        width: 300px;
-        height: 200px;
-        /* padding-top: 40px; */
-        padding-left: 10px;
-        bottom: 30px;
-        /* right: 150px; */
-        position: absolute;
+        font-size: 170%;
+        right: 0px;
+    }
+
+    .about-quote-container{
+        width: 50%;
     }
 
     .about-quote-container p{
@@ -475,11 +482,6 @@ label{
 
 
     .goButton{
-        text-decoration: none;
-        background-color: #ff0000;
-        /* font-size: large; */
-        color: #ffffff;
-        border-radius: 5px;
-        /* padding: 5px;*/
+        font-size: small;
     }
 }
