--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -81,7 +81,7 @@ header div{
 
 /*Website structure*/
 .main-section{
-    height: 700px;
+    /*height: 700px;*/
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -393,6 +393,38 @@ label{
         justify-content: center;
     }
 
+    .main-section{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+    }
+
+    .main-section-text{
+        width: 60%;
+    }
+
+    .button{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .three-box-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .one-third-box{
+        width: 60%;
+    }
+
+    #map-section{
+        width: 80%;
+        margin: 0 auto;
+    }
+
     footer{
         height: 50px;
         width: 100%;
@@ -430,6 +462,15 @@ label{
         text-align: center;
         border-radius: 10px;
         justify-content: center; 
+    }
+
+    .one-third-box{
+        width: 85%;
+    }
+
+    .three-box-section{
+        width: 75%;
+        border-radius: 40px;
     }
 
     footer{
