--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -462,7 +462,7 @@ label{
     .links{
         font-size: 80%;
         position: relative;
-        text-align: center;
+        text-align: left;
     }
 
 
