--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,7 +25,8 @@ h1, h2{
 .heading{
     display: flex;
     flex-direction: column;
-    align-items: center
+    align-items: center;
+    margin: 1%;
 }
 
 .navigation{
@@ -69,13 +70,10 @@ h1, h2{
 
 /*Page structure, main section and one third boxes*/
 .main-section{
-    width: 100%;
     padding-top: 1%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-content: flex-start;
+    margin: 0 1% 0 1%;
+    border-radius: 5px
 }
 
 .one-third-box{
@@ -243,11 +241,13 @@ footer h3{
 .bike-section-media{
     width: 45%;
     margin: 0 auto;
+    margin-bottom: 1%;
 }
 
 .bike-section-media iframe{
     height: 100%;
     width: 100%;
+    border-radius: 5px;
 }
 
 .bike-section-media img{
