--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,12 +325,11 @@ footer h3{
 }
 
 /* Form Section */
-#sign-up{
+.sign-up{
     background-image: url("../images/group-cycle.jpg");
-    background-size: cover;
+    height: 960px;
     background-position: center;
-    width: 100%;
-    height: 100%;
+    background-size: cover;
 }
 
 .details-form{
