--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,6 +114,11 @@ h1, h2{
     padding: 5px;
 }
 
+.goButton:hover{
+    background-color: #ffffff;
+    color: #ff0000;
+}
+
 .go-button{
     padding: 2%;
 }
