--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -256,9 +256,11 @@ footer h3{
     border-radius: 5px;
 }
 
+/*This style was shown to me by my friend who is a we dev, it was a last ditch effort to sove the sizing*/
 .bike-section-media img{
+    object-fit: cover;
     width: 100%;
-    height: 100%;
+    max-height: 500px;
     border-radius: 5px;
 }
 
