Add fix for buttons not displaying correctly on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -459,6 +459,12 @@ label{
         font-size: 100%;
     }
 
+    .button{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     #covering-text{
         right: 50px;
     }
