--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,14 +8,14 @@
 }
 
 body{
-    font-family: Raleway, sans-serif;
+    font-family: Raleway, 'sans-serif';
     font-size: 16px;
     color: #111111;
 }
 
 /* Headings and Logos,*/
 h1, h2{
-    font-family: Abril Fatface, sans-serif;
+    font-family: Abril Fatface, 'sans-serif';
     text-transform: uppercase;
     font-weight: 200;
     letter-spacing: 5px;
